--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "nodemon --watch main.js --exec electron ."
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -17,6 +17,10 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^26.3.0"
+    "electron": "^26.3.0",
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.2"
   }
 }
