--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "electron-store": "^8.1.0",
+    "font-awesome": "^4.7.0",
     "uuid": "^9.0.1"
   }
 }
