--- a/package.json
+++ b/package.json
@@ -1,10 +1,26 @@
 {
-  "name": "electron-quick-start",
+  "name": "electron-music-player",
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "nodemon --watch main.js --exec electron ."
+    "start": "nodemon --watch main.js --exec electron .",
+    "dist": "electron-builder"
+  },
+  "build": {
+    "appId": "electronMusicPlayer",
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "icon" : "build/icon.ico",
+      "requestedExecutionLevel" : "highestAvailable"
+    }
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -18,6 +34,7 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^26.3.0",
+    "electron-builder": "^24.6.4",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
